# opus-hackathon

./: .gitignore  PLAN.md  README.md
backend/: generate_dataset.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: config.py  live.py  transcribe.py
backend/app/core/: config.py
backend/app/models/: music_representation.py
backend/app/services/: audio_processor.py  orchestrator.py  pitch_detector.py  tempo_analyzer.py
backend/app/services/converters/: carnatic_converter.py  hindustani_converter.py  staff_converter.py
backend/app/services/synthesis/: audio_synth.py  note_generator.py  ornamentations.py
backend/tests/: test_converters.py  test_pipeline.py
frontend/: package-lock.json  package.json
frontend/public/: audio-processor.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/editor/: page.tsx
frontend/src/app/live/: page.tsx
frontend/src/audio/: PlaybackEngine.ts
frontend/src/components/: AudioUploader.tsx  CarnaticRenderer.tsx  HindustaniRenderer.tsx  LiveCapture.tsx  LiveNotationScroll.tsx  NotationDisplay.tsx  NotationTypeSelector.tsx  PitchSelector.tsx  PlaybackControls.tsx  SimpleEditor.tsx  StaffRenderer.tsx
frontend/src/hooks/: useAudioCapture.ts  usePlayback.ts  useWebSocket.ts
frontend/src/lib/: api.ts  noteUtils.ts
frontend/src/stores/: editorStore.ts  liveStore.ts  transcriptionStore.ts
frontend/src/types/: music.ts
