[project]
name = "sangeet-backend"
version = "0.1.0"
description = "Musical audio to notation transcription backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "basic-pitch",
    "librosa",
    "soundfile",
    "numpy",
    "pretty-midi",
    "pydantic",
    "websockets",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
